# games

./: .gitignore  README.md  demo.cast  demo2.cast  engine.py  geometric_progression.py  nok.py  pyproject.toml
games/: geometric_progression.py  nok.py
